--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elias Larsson</title>
 </head>
 <body>
-    <h1>Min Första Hemsida!</h1>
-    <p>Välkommen till min hemsida där alla mina projekt kommer att synas</p>
     
+    <h1>Elias Larsson</h1>
+    
+    <h3>About Me</h3>
+    <pre>
+        Welcome to my site,
+        I am a student in webbdelevopment
+        This is my portfolio.
+        Contact me for more info: Mingodlymeijl@hotmail.com
+    </pre>
+    <img src="Chelsea.jpeg" alt="Champions" width="20%">
+
 </body>
 </html>
